--- a/cajaAhorros/app_cajaAhorros/templates/base.html
+++ b/cajaAhorros/app_cajaAhorros/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 </head>
+
 <body class="d-flex flex-column min-vh-100 bg-light text-dark">
 
     <div class="container-fluid">
@@ -18,22 +20,28 @@
             <nav class="col-md-3 col-lg-2 d-md-block bg-dark sidebar collapse show p-0">
                 <div class="position-sticky">
                     <div class="sidebar-sticky pt-3 text-white">
-                    {% load static %}
-                    <div class="px-3 mb-4 mt-3 text-center">
-                        <a href="/">
-                            <img src="{% static 'img/logo.png' %}" alt="Logo Caja Nantar" style="max-height: 80px;" class="mb-2">
-                        </a>
-                    </div>
+                        {% load static %}
+                        <div class="px-3 mb-4 mt-3 text-center">
+                            <a href="/">
+                                <img src="{% static 'img/logo.png' %}" alt="Logo Caja Nantar" style="max-height: 80px;"
+                                    class="mb-2">
+                            </a>
+                        </div>
                         <ul class="nav flex-column px-2">
                             <li class="nav-item mb-2">
-                                <a class="nav-link text-white {% if request.path == '/socios/' %}active{% endif %}" href="{% url 'socio_list' %}">
+                                <a class="nav-link text-white {% if request.path == '/socios/' %}active{% endif %}"
+                                    href="{% url 'socio_list' %}">
                                     <i class="bi bi-house-door-fill me-2"></i> Socios
                                 </a>
                             </li>
                             <li class="nav-item mb-2">
-                                <a class="nav-link text-white {% if request.path == '/prestamos/' %}active{% endif %}" href="{% url 'prestamo_list' %}">
+                                <a class="nav-link text-white {% if request.path == '/prestamos/' %}active{% endif %}"
+                                    href="{% url 'prestamo_list' %}">
                                     <i class="bi bi-cash-stack me-2"></i> Préstamos
                                 </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'configuracion' %}">Configuración</a>
                             </li>
 
                         </ul>
@@ -45,7 +53,7 @@
                                     <i class="bi bi-person-circle me-2"></i> Hola, {{ user.username }}
                                 </span>
                             </li>
-                            
+
                             <li class="nav-item">
                                 <a class="nav-link text-white" href="/accounts/logout/">
                                     <i class="bi bi-box-arrow-right me-2"></i> Cerrar sesión
@@ -87,4 +95,5 @@
     <script src="{% static 'js/custom.js' %}"></script>
     {% block java-script-extra %}{% endblock java-script-extra %}
 </body>
+
 </html>
