--- a/cajaAhorros/app_cajaAhorros/templates/base.html
+++ b/cajaAhorros/app_cajaAhorros/templates/base.html
@@ -41,7 +41,9 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'configuracion' %}">Configuración</a>
+                                <a class="nav-link" href="{% url 'configuracion' %}">
+                                    <i class="bi bi-gear"></i> Configuración
+                                </a>
                             </li>
 
                         </ul>
